@@ -657,7 +657,12 @@ class IO
       break if fstr.last_spec
       fstr.prune
     end
-    seek(start_position + matched_so_far, IO::SEEK_SET) rescue Errno::ESPIPE
+
+    begin
+      seek(start_position + matched_so_far, IO::SEEK_SET)
+    rescue Errno::ESPIPE
+    end
+
     soak_up_spaces if fstr.last_spec && fstr.space
 
     return final_result
